Use JVMCI from JDK9. Start preparing to use Graal.